k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-viz
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-jaeger
